--- a/src/components/map.css
+++ b/src/components/map.css
@@ -2,9 +2,7 @@
     position: fixed;
     float:right;
     top: 0;
-    bottom: 5vh;
-    left: 550px;
     right: 0;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 70vw;
 }
