fix button size

--- a/src/components/sidebar_items/aoi.css
+++ b/src/components/sidebar_items/aoi.css
@@ -80,6 +80,7 @@
     color: #FFFFFF;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
+    font-size: 1vw;
 }
 
 .btn2{
@@ -95,4 +96,5 @@
     color: #f64c72ff;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
+    font-size: 1vw;
 }
